--- a/WpfApp3.csproj
+++ b/WpfApp3.csproj
@@ -8,7 +8,25 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <None Remove="ellipse.png" />
+    <None Remove="eraser.png" />
+    <None Remove="line.png" />
+    <None Remove="polyline.png" />
+    <None Remove="rectangle.png" />
+    <None Remove="recycle.png" />
+  </ItemGroup>
+
+  <ItemGroup>
     <PackageReference Include="Extended.Wpf.Toolkit" Version="4.5.1" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Resource Include="ellipse.png" />
+    <Resource Include="eraser.png" />
+    <Resource Include="line.png" />
+    <Resource Include="polyline.png" />
+    <Resource Include="rectangle.png" />
+    <Resource Include="recycle.png" />
   </ItemGroup>
 
 </Project>
